# energy-race-sim

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
simulation/: __init__.py  base.py  car.py  environment.py  physics.py  position.py  simulation.py  tile.py  track.py  units.py  vehicle.py
test/: test_environment.py  test_experimental_runs.py  test_tiles.py  test_track.py
ui/: chart.py  display.py  render.py  state.py
ui/static/: style.css
